<resources>
    <string name="app_name">Dooz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_invitation_list">Invitations</string>
    <string name="menu_safe_list">Safes</string>
    <string name="menu_payment_methods">Payment Methods</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_safe_create">Create Safe</string>
    <string name="menu_safe_detail"></string>
    <string name="menu_user_search"></string>
    <string name="menu_safe_history">Safe History</string>

    <string name="action_leave">Leave</string>
    <string name="action_start">Start</string>
    <string name="action_add_invite">Invite</string>
    <string name="action_invite_accept">Accept</string>
    <string name="action_invite_reject">Reject</string>
    <string name="action_invite_cancel">Cancel</string>
    <string name="action_invite_safe">Safe Details</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_invite">Invite</string>
    <string name="action_safe_detail_history">History</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_already_have_account">I already have an account</string>
    <string name="action_create">Create</string>
    <string name="action_update">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log out</string>
    <string name="action_save">Save</string>

    <string name="user_count"><u>0</u></string>

    <string name="error_validation_invalid_email">Email is invalid</string>
    <string name="error_validation_empty_email">Email cannot be empty</string>
    <string name="error_validation_empty_first_name">First Name cannot be empty</string>
    <string name="error_validation_empty_last_name">Last Name cannot be empty</string>
    <string name="error_validation_empty_password">Password cannot be empty</string>
    <string name="error_validation_not_matching_passwords">Passwords are not matching</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Password Confirmation</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_user_search">Type in someone\'s name</string>
    <string name="hint_bankinfo_xxx1">bankinfo xxx1</string>
    <string name="hint_bankinfo_xxx2">bankinfo xxx2</string>
    <string name="hint_bankinfo_xxx3">bankinfo xxx3</string>

    <string name="empty_data_safe_list">You have no Safe</string>
    <string name="empty_data_payment_method_list">You have no Payment Method</string>
    <string name="empty_data_active_payment_method_list">You have no Active Payment Method</string>
    <string name="empty_data_invite_list">You have no Invitation</string>
    <string name="empty_data_payment_list">There is no Payment</string>
    <string name="empty_data_invitee_list">You have no Invitee added</string>

    <string name="et_search_user_hint">Enter email…</string>

    <string name="payment_method_name">Payment Method Name</string>
    <string name="payment_methods">Payment Methods</string>

    <string name="forgot_password_question">Forgot password?</string>
    <string name="new_user_question">Don\'t have an account? Join us?</string>
    <string name="already_have_account_question">Have an account? Log in?</string>
    <string name="register_terms_conditions">I agree with Terms of Service &amp; Privacy Policy</string>

    <string name="safe_name">Safe Name</string>
    <string name="safe_monthly_payment">Monthly Payment</string>
    <string name="tv_safe_status">Status</string>

    <string name="title_activity_create_safe">CreateSafeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="header_payment_list">Payment Methods</string>
    <string name="header_task_list">Safe Tasks</string>

    <!-- Preference Titles -->
    <string name="pref_profile_header">Profile</string>
    <string name="sync_header">setting sample 2</string>

    <!-- Profile Preferences -->
    <string name="pref_email_title">Email</string>
    <string name="pref_firstname_title">First Name</string>
    <string name="pref_lastname_title">Last Name</string>
    <string name="pref_dob_title">Date of Birth</string>

    <!-- XXX Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="desc_invite_participants">Add more participants</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="login_invalid_credentials">Login failed. Invalid Credentials</string>
    <string name="login_error">Login failed with error</string>

</resources>