<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_invitation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_invitation_list" />
        <item
            android:id="@+id/nav_safe"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_safe_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    </group>
</menu>