<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payment_method_create_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.paymentmethod.PaymentMethodCreateFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payment_method_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_method_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/payment_methods" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="Direct Debit" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payment_method_create_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_create"
        style="?attr/borderlessButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payment_method_create_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:text="@string/action_update"
        style="?attr/borderlessButtonStyle" />
</LinearLayout>