<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- HOME -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.doozez.doozez.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- PAYMENT METHOD LIST -->
    <fragment
        android:id="@+id/nav_payment_method_list"
        android:name="com.doozez.doozez.ui.paymentmethod.PaymentMethodListFragment"
        android:label="@string/menu_payment_methods"
        tools:layout="@layout/fragment_payment_method_list">

        <action
            android:id="@+id/nav_payment_method_list_to_nav_payment_create"
            app:destination="@id/nav_payment_method_create"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <!-- PAYMENT METHODS -->
    <fragment
        android:id="@+id/nav_payments"
        android:name="com.doozez.doozez.ui.payment.PaymentListFragment"
        android:label="@string/menu_payments"
        tools:layout="@layout/fragment_payment_list" />

    <!-- CREATE PAYMENT METHODS -->
    <dialog
        android:id="@+id/nav_payment_method_create"
        android:name="com.doozez.doozez.ui.paymentmethod.PaymentMethodCreateFragment"
        android:label="@string/menu_payment_methods"
        tools:layout="@layout/fragment_payment_method_create">

        <action
            android:id="@+id/nav_payment_method_create_to_nav_payment_create_redirect"
            app:destination="@id/nav_payment_create_redirect"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </dialog>

    <!-- INVITATION -->
    <fragment
        android:id="@+id/nav_invitation"
        android:name="com.doozez.doozez.ui.invitation.InvitationListFragment"
        android:label="@string/menu_invitation_list"
        tools:layout="@layout/fragment_invitation_list">

        <action
            android:id="@+id/action_nav_invitation_to_nav_safe_detail"
            app:destination="@id/nav_safe_detail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_nav_invitation_to_nav_payment_method_select"
            app:destination="@id/nav_payment_method_select" />

    </fragment>

    <!-- SAFES -->
    <fragment
        android:id="@+id/nav_safe"
        android:name="com.doozez.doozez.ui.safe.SafeListFragment"
        android:label="@string/menu_safe_list"
        tools:layout="@layout/fragment_safes_list">

        <action
            android:id="@+id/action_nav_safe_to_nav_safe_create"
            app:destination="@id/nav_safe_create"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_nav_safe_to_nav_safe_detail"
            app:destination="@id/nav_safe_detail"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- SAFE DETAIL -->
    <fragment
        android:id="@+id/nav_safe_detail"
        android:name="com.doozez.doozez.ui.safe.SafeDetailFragment"
        android:label="@string/menu_safe_detail"
        tools:layout="@layout/fragment_safe_detail">

        <action
            android:id="@+id/action_nav_safe_detail_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_nav_safe_detail_to_nav_user_search"
            app:destination="@id/nav_user_search_invitee"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_nav_safe_detail_to_nav_safe_history"
            app:destination="@id/nav_safe_history"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_nav_safe_detail_to_nav_payment_method_select"
            app:destination="@id/nav_payment_method_select" />

        <action
            android:id="@+id/action_nav_safe_to_nav_task_list"
            app:destination="@id/nav_task_list" />

    </fragment>

    <!-- SAFE HISTORY -->
    <fragment
        android:id="@+id/nav_safe_history"
        android:name="com.doozez.doozez.ui.safe.SafeHistoryFragment"
        android:label="@string/menu_safe_history"
        tools:layout="@layout/fragment_safe_history" />

    <!-- CREATE SAFE -->
    <fragment
        android:id="@+id/nav_safe_create"
        android:name="com.doozez.doozez.ui.safe.SafeCreateFragment"
        android:label="@string/menu_safe_create"
        tools:layout="@layout/fragment_safe_create">

        <action
            android:id="@+id/action_nav_safe_to_nav_payment_method_select"
            app:destination="@id/nav_payment_method_select" />

    </fragment>

    <!-- Job Task List -->
    <dialog
        android:id="@+id/nav_task_list"
        android:name="com.doozez.doozez.ui.task.TaskListFragment"
        tools:layout="@layout/fragment_task_list" />

    <!-- PAYMENT METHODS LIST -->
    <dialog
        android:id="@+id/nav_payment_method_select"
        android:name="com.doozez.doozez.ui.paymentmethod.PaymentMethodSelectFragment"
        tools:layout="@layout/fragment_payment_method_select">

        <action
            android:id="@+id/action_nav_payment_method_select_to_nav_payment_methods"
            app:destination="@id/nav_payment_method_list"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </dialog>

    <!-- CREATE PAYMENT METHOD REDIRECT -->
    <fragment
        android:id="@+id/nav_payment_create_redirect"
        android:name="com.doozez.doozez.ui.paymentmethod.PaymentMethodRedirectFragment"
        tools:layout="@layout/fragment_payment_create_redirect" />


    <!-- SETTING -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.doozez.doozez.ui.setting.SettingsFragment"
        android:label="@string/action_settings" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.doozez.doozez.ui.user.ProfileFragment"
        android:label="" />


    <!-- USER SEARCH NAVIGATION -->
    <navigation
        android:id="@+id/nav_user_search_invitee"
        app:startDestination="@id/nav_user_search">
        <fragment
            android:id="@+id/nav_user_search"
            android:name="com.doozez.doozez.ui.user.UserSearchFragment"
            android:label="@string/menu_user_search"
            tools:layout="@layout/fragment_user_search">

            <action
                android:id="@+id/action_nav_user_search_to_nav_user_invitee_list"
                app:destination="@id/nav_user_invitee_list" />

        </fragment>
        <dialog
            android:id="@+id/nav_user_invitee_list"
            android:name="com.doozez.doozez.ui.user.UserInviteeListFragment"
            tools:layout="@layout/fragment_user_invitee_list" />
    </navigation>


</navigation>