<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.ProfileFragment">

    <include
        android:id="@+id/overlay_loader"
        layout="@layout/overlay_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/cities" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/cities" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/cities" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profile_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/action_change_password"
                    android:layout_weight="0.5"
                    style="?attr/borderlessButtonStyle"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profile_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/action_update"
                    android:layout_weight="0.5"
                    style="?attr/borderlessButtonStyle"
                    />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>