<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bankinfo_container"
    tools:context=".ui.bankinfo.BankInfoFragment">

    <include
        android:id="@+id/overlay_loader"
        layout="@layout/overlay_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bankinfo_xxx1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:errorEnabled="true"
            android:layout_marginVertical="10dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bankinfo_xxx2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bankinfo_xxx2"
            app:errorEnabled="true"
            android:layout_marginVertical="10dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bankinfo_xxx3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bankinfo_xxx3"
            app:errorEnabled="true"
            android:layout_marginVertical="10dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bankinfo_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/action_save"
            style="?attr/borderlessButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>